2004-01-31 21:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: -[GormMenuEditor activate]
	removed call to -[NSMenu display].  This corrects Report#3439.

2004-01-29 23:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFunctions.[hm]: Factored out some common functions into
	this file.
	
2004-01-29 01:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInternalViewEditor.m: Added code to -destroyAndListSubviews
	to remove the view from the document as appropriate.
	* GormSplitViewEditor.m: Same as above.
	* GormViewEditor.m: Added methods to handle view when inside the 
	scroll view directly as opposed to being contained in the NSView.
	* GormScrollViewEditor.m: Same as above.  Also added code to 
	handle removal of single view from the scroll view.  
	* GormViewWithContentViewEditor.m: Removed some debug code and
	added code in -groupSelectionInScrollView to add the view itself
	if there is only one view selected.
		
2004-01-25 17:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInternalViewEditor.m: Change to remove dependency on internals
	of NSWindow: GSWindowView, in particular.
	
2004-01-20 08:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewWithContentViewEditor.m: Backing out previous change.
	
2004-01-17 23:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewEditor.[hm]: Addition of selection and makeSelectionVisible
	methods to allow views to exist within a scrollview without a
	containing NSView. 
	* GormViewWithContentViewEditor.m: Changed code in 
	groupSelectionInScrollView to not insert a NSView to contain the 
	subview being grouped in the case where there is only one
	view selected.   These fixes correct Report#6890.
		
2004-01-14 10:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added submenuAction: to the NSMenu
	class.
	
2004-01-14 01:42 Gregory John Casamento <greg_casamento@yahoo.com>
