@@ -1,3 +1,9 @@
+2004-02-01 18:21 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormDocument.m: -[GormDocument attachObject:toParent:]
+	Added code to prevent menu actions from being re-added when
+	clicking on menu items.
+	
 2004-01-31 21:21 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/0Menus/GormMenuEditor.m: -[GormMenuEditor activate]
